@@ -37,7 +37,7 @@ use AnyEvent ();
 use AnyEvent::Handle ();
 use AnyEvent::Util qw(AF_INET6);
 
-our $VERSION = '1.0';
+our $VERSION = 4.1;
 
 our @DNS_FALLBACK = (v208.67.220.220, v208.67.222.222);
 
