@@ -18,6 +18,7 @@ Revision history for Perl extension AnyEvent.
         - use configured timeout also for VC request phase.
         - implement timeout and max_outstanding methods
           for resolver class.
+        - update version numbers in all modules.
 
 4.1  Thu May 29 05:45:40 CEST 2008
 	- INCOMPATIBLE CHANGE: renamed xxx_ip functions to xxx_address
